--- a/catalog/templates/registration/login.html
+++ b/catalog/templates/registration/login.html
@@ -20,8 +20,9 @@
 <table>
 <tr>
     <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
+    <td>{{ form.username }}<br></td>
 </tr>
+<br>
 <tr>
     <td>{{ form.password.label_tag }}</td>
     <td>{{ form.password }}</td>
