--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   
-    {% block title %}<title>Bibliotheca</title>{% endblock %}
+  {% block title %}<title>Local Library</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -12,9 +11,53 @@
   
   <!-- Add additional CSS in static file -->
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
+<td style="background: url('{{ STATIC_URL }}images/img2.jpg') no-repeat;"> 
+  <!--ul class="nav nav-pills nav-justified">
+    <li class="active"><a href="{% url 'index' %}">Home</a></li>
+    <li><a href="{% url 'books' %}">All Books</a></li>
+    <li><a href="{% url 'authors' %}">All Authors</a></li>
+  </ul>
+</div-->
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Bibliotheca</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="{% url 'index' %}">Home</a></li>
+      <li><a href="{% url 'books' %}">All Books</a></li>
+      <li><a href="{% url 'authors' %}">All Authors</a></li>
+      
+
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Me
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="https://www.quora.com/profile/Sachin-Bagalakoti">Quora</a></li>
+          <li><a href="https://github.com/Sac08">Github</a></li>
+          <li><a href="https://www.facebook.com/sachin0897">facebook</a></li>
+          <li><a href="mailto:sachinbagalakoti08@gmail.com">Gmail</a></li>
+        </ul>
+      </li>
+      <div class="col-sm-3 col-md-5">
+        <form class="navbar-form" action="#" role="search">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search" name="q">
+            <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+        </div>
+        </form>
+    </div>
+
+    </ul>
+  </div>
+</nav>
+
 
 <div class="container-fluid">
 
@@ -22,30 +65,36 @@
   <div class="col-sm-2">
   {% block sidebar %}
   <ul class="sidebar-nav">
+  <ul class="nav nav-pills nav-stacked">
     <li><a href="{% url 'index' %}">Home</a></li>
     <li><a href="{% url 'books' %}">All books</a></li>
     <li><a href="{% url 'authors' %}">All authors</a></li>
   </ul>
+  </ul>
  
   <ul class="sidebar-nav">
    {% if user.is_authenticated %}
+   <ul class="nav nav-pills nav-stacked">
      <li>User: {{ user.get_username }}</li>
      <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
-     <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+     <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+     </ul>   
    {% else %}
-     <li><a href="{% url 'login'%}?next={{request.path}}">Login</a><br>(To see borrowed books)</br></li>   
+   <ul class="nav nav-pills nav-stacked">
+     <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
+    </ul>
    {% endif %} 
   </ul>
   
    {% if user.is_staff %}
    <hr />
    <ul class="sidebar-nav">
+    <ul class="nav nav-pills nav-stacked">
    <li>Staff</li>
-   <li><a href="{% url 'book_create' %}">Add Book</li>
-   <li><a href="{% url 'author_create' %}">Add Author</li>
    {% if perms.catalog.can_mark_returned %}
    <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
    {% endif %}
+   </ul>
    </ul>
     {% endif %}
  
@@ -59,6 +108,7 @@
         <div class="pagination">
             <span class="page-links">
                 {% if page_obj.has_previous %}
+
                     <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
                 {% endif %}
                 <span class="page-current">
@@ -77,7 +127,6 @@
 </div>
 
 </div>
-
 <!-- Social Footer, Colour Matching Icons -->
 <!-- Include Font Awesome Stylesheet in Header -->
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -101,3 +150,4 @@
 
 </body>
 </html>
+
