--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -2,21 +2,74 @@
 {% block title %} <title>HomePage</title>
 {% endblock %}
 {% block content %}
-<h1>Bibliotheca Home</h1>
 
-  <p>Welcome to <em>biblioteca</em>, This Library has collection of different books for veriety of users , the book is only issued to registered users , along with they can see the books that they borrowed from bibliotheca(spanish , en:library) . In this website the librarian can re-new overdue book of perticaular user and can add new , delete existing , update existing book / Author in bibliotheca. </p>
+<div class="jumbotron">
+<h2><u><b><center>Bibliotheca Home</center></b></u></h2>
+
+<div class="container"> 
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+{% load static %}
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="{% static 'images/img1.jpg' %}" alt="Los Angeles" style="width:70% he;">
+                <div class="carousel-caption">
+          <h3>Place</h3>
+          <p>Peaceful place to study.</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="{% static 'images/img3.jpg' %}" alt="Chicago" style= "width:70% height:200px;">
+        <div class="carousel-caption">
+          <h3>Collection</h3>
+          <p>Here you get all kind of books.</p>
+        </div>
+      </div>
+    
+      <div class="item">
+        <img src="{% static 'images/img2.jpg' %}" alt="New york" height="200px" style="width:100%;">
+                <div class="carousel-caption">
+          <h3>Quantity</h3>
+          <p>Nearly 10,000 books from different generation.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+
+  </div>
+</div>
+<br>
+<br>
+<br>
+  <p> Welcome to <em>bibliotheca</em>, This Library has collection of different books for veriety of users , the book is only issued to registered users , along with they can see the books that they borrowed from bibliotheca(spanish , en:library) . In this website the librarian can re-new overdue book of perticaular user and can add new , delete existing , update existing book / Author in bibliotheca. </p>
   <p>The Books/authors info can be accessed by any users , but they are not allowed to view the books they borrowed unless they are logged in.</p>
 
-<h2>Contents Present In Bibliotheca</h2>
+<h2><u><i><center>Contents Present In Bibliotheca</center></i></u></h2>
 
   <p>The library has the following record counts:</p>
   <ul>
     <li><strong>Total Books:</strong> {{ num_books }}</li>
     <li><strong>Total Copies:</strong> {{ num_instances }}</li>
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
-    <li><strong>Books On loan:</strong>{{num_instances_}}</li>
+    <li><strong>Books On loan:</strong>{{num_onLoan}}</li>
     <li><strong>All Authors:</strong> {{ num_authors }}</li>
   </ul>
   <p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}.</p>
-
+</div>
 {% endblock %}
